LIN-3415/LIN-3474 :: Fix overlapping label and input fields
(cherry picked from commit 9b14b10f52594e928f3538be34c54b8e72fa5ada)

--- a/vaadin-flow/core/src/main/resources/META-INF/resources/frontend/styles/linkki-section.css
+++ b/vaadin-flow/core/src/main/resources/META-INF/resources/frontend/styles/linkki-section.css
@@ -4,6 +4,8 @@ linkki-section {
 
 linkki-section > div[slot="content"] > * {
     max-width: var(--section-item-width);
+    min-width: calc(var(--vaadin-form-item-label-spacing, 1em) + var(--linkki-form-item-label-width, 8em) + var(--vaadin-field-default-width, 12em));
+    overflow: auto;
 }
 
 .linkki-section-caption-text {
